<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ContactsManager</string>
    <string name="title_activity_main">Contacts Manager App</string>
    <string name="menu_addNew">Add new contact</string>
    <string name="menu_edit">Edit contact</string>
    <string name="menu_delete">Delete contact</string>
    <string name="button_call">Call</string>
    <string name="button_text">SMS</string>
    <string name="pref_types">com.jerryfeng.pref_types</string>
    <string name="pref_values">com.jerryfeng.pref_values</string>
    <string name="pref_listLength">com.jerryfeng.pref_count</string>
    <string name="pref_name">com.jerryfeng.pref_name</string>
    <string name="pref_number">com.jerryfeng.pref_tel</string>
    <string name="pref_email">com.jerryfeng.pref_email</string>
    <string name="pref_misc">com.jerryfeng.pref_misc</string>
    <string name="pref_numofnumbers">com.jerryfeng.numOfNumbers</string>
    <string name="pref_numofemails">com.jerryfeng.numOfEmails</string>
    <string name="pref_numofmisc">com.jerryfeng.numOfMisc</string>

    <string name="title_activity_add_new">Add New Contact</string>
    <string name="avatar_description">Contact avatar</string>
    <string name="menu_save">Save contact</string>

    <string name="hint_name">Name</string>
    <string name="hint_number">Phone number</string>
    <string name="hint_email">Email address</string>
    <string name="hint_type">Type</string>
    <string name="hint_misc">Add more fields</string>

    <string name="buttonAddField">+</string>
    <string name="buttonDeleteField">-</string>

    <string name="frag_tag_number">com.jerryfeng.tagNumber</string>
    <string name="frag_tag_email">com.jerryfeng.tagEmail</string>
    <string name="frag_tag_misc">com.jerryfeng.tagMisc</string>

    <string name="title_activity_edit">Edit Contact</string>

    <string name="extra_contactparcel">com.jerryfeng.extraContactParcel</string>
    <string name="extra_listposition">com.jerryfeng.extraListPosition</string>
    <string name="extra_name">com.jerryfeng.extraName</string>
    <string name="extra_numofnumbers">com.jerryfeng.extraNumOfNumbers</string>
    <string name="extra_numberType">com.jerryfeng.extraNumberType</string>
    <string name="extra_numberValue">com.jerryfeng.extraNumberValue</string>
    <string name="extra_numofemails">com.jerryfeng.extraNumOfEmails</string>
    <string name="extra_emailType">com.jerryfeng.extraEmailType</string>
    <string name="extra_emailValue">com.jerryfeng.extraEmailValue</string>
    <string name="extra_numofmisc">com.jerryfeng.extraNumOfMisc</string>
    <string name="extra_miscType">com.jerryfeng.extraMiscType</string>
    <string name="extra_miscValue">com.jerryfeng.extraMiscValue</string>
    <string name="extra_image">com.jerryfeng.extraImage</string>

</resources>
